// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExperienceModal renders if only required params are passed in 1`] = `
<div
  class="sc-gKXOVf cNOAyo"
  data-testid="ExperienceModal"
>
  <div
    class="sc-iBkjds lgAXJZ"
  >
    <div
      class="sc-ftvSup jPzHnb"
    >
      <img
        alt="logo"
        class="sc-papXJ ijcNsj"
        data-testid="Logo"
        src="[object Object]"
      />
    </div>
    <div
      class="sc-jqUVSM eukuru"
    >
      <div
        class="sc-kDDrLX erjzcT"
      >
        <div
          class="sc-iqcoie hZaRyn"
        >
          Title
        </div>
        <span
          class="sc-crXcEl YkJlI"
          data-testid="Title"
        >
          test title
        </span>
      </div>
      <div
        class="sc-kDDrLX erjzcT"
      >
        <div
          class="sc-iqcoie hZaRyn"
        >
          Employer
        </div>
        <span
          class="sc-crXcEl YkJlI"
          data-testid="Employer"
        >
          test employer
        </span>
      </div>
    </div>
  </div>
  <div
    class="sc-breuTD eUvivm"
  >
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
  </div>
</div>
`;

exports[`ExperienceModal renders if optional and required params are passed in 1`] = `
<div
  class="sc-gKXOVf cNOAyo"
  data-testid="ExperienceModal"
>
  <div
    class="sc-iBkjds lgAXJZ"
  >
    <div
      class="sc-ftvSup jPzHnb"
    >
      <img
        alt="logo"
        class="sc-papXJ ijcNsj"
        data-testid="Logo"
        src="[object Object]"
      />
    </div>
    <div
      class="sc-jqUVSM eukuru"
    >
      <div
        class="sc-kDDrLX erjzcT"
      >
        <div
          class="sc-iqcoie hZaRyn"
        >
          Title
        </div>
        <span
          class="sc-crXcEl YkJlI"
          data-testid="Title"
        >
          test title
        </span>
      </div>
      <div
        class="sc-kDDrLX erjzcT"
      >
        <div
          class="sc-iqcoie hZaRyn"
        >
          Employer
        </div>
        <span
          class="sc-crXcEl YkJlI"
          data-testid="Employer"
        >
          test employer
        </span>
      </div>
    </div>
  </div>
  <div
    class="sc-breuTD eUvivm"
  >
    <div>
      <div />
    </div>
    <div>
      <div
        class="sc-evZas jyOmOC"
      >
        <div />
        <div />
      </div>
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div
        data-testid="ProjectLineItems"
      >
        <div />
        <div />
      </div>
    </div>
  </div>
</div>
`;
